--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4782ed22",
+   "id": "0af0425f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,29 +28,34 @@
     "        # Click the SSO button\n",
     "        button_text_selector = \"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\"\n",
     "        try:\n",
-    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=10000)\n",
+    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=30000)  # 30 seconds timeout\n",
     "            await page.click(f'xpath={button_text_selector}')\n",
     "            print(\"SSO button clicked successfully!\")\n",
     "        except PlaywrightTimeoutError:\n",
-    "            print(\"Could not find the SSO button on the page.\")\n",
+    "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
+    "            return\n",
     "\n",
-    "        # Wait for the dashboard to load\n",
-    "        await page.wait_for_load_state('networkidle')\n",
+    "        # Wait for the dashboard to load by waiting for a key element (adjust this selector)\n",
+    "        try:\n",
+    "            await page.wait_for_selector('select, input', timeout=60000)  # 60 seconds timeout\n",
+    "            print(\"Dashboard loaded successfully!\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Timeout waiting for filters to load. Exiting...\")\n",
+    "            return\n",
     "\n",
-    "        print(\"Dashboard loaded. Extracting filter names...\")\n",
-    "\n",
-    "        # Locate all dropdown filters (select elements)\n",
-    "        filters = await page.query_selector_all('select, input')  # Include both selects and inputs\n",
+    "        # Locate all dropdown filters (select elements) and input filters\n",
+    "        filters = await page.query_selector_all('select, input')\n",
     "\n",
     "        # Print details for all filters\n",
     "        print(\"\\nFilters Found:\")\n",
     "        for filter_el in filters:\n",
-    "            filter_name = await filter_el.get_attribute('name') or await filter_el.get_attribute('id')\n",
+    "            filter_name = await filter_el.get_attribute('name') or await filter_el.get_attribute('id') or \"Unnamed Filter\"\n",
     "            filter_type = await filter_el.get_attribute('type') if await filter_el.get_attribute('type') else 'select'\n",
+    "\n",
     "            print(f\"Filter Name: {filter_name}, Filter Type: {filter_type}\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
-    "        await asyncio.sleep(300)\n",
+    "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    asyncio.run(run())\n"
@@ -59,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5ea628",
+   "id": "82d844f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a06fe57d",
+   "id": "eeaf4e9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb83b715",
+   "id": "b4c7bea8",
    "metadata": {},
    "outputs": [],
    "source": [
