--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af0425f",
+   "id": "1d7f4845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,24 +35,30 @@
     "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Wait for the dashboard to load by waiting for a key element (adjust this selector)\n",
+    "        # Wait for the dashboard to load\n",
     "        try:\n",
-    "            await page.wait_for_selector('select, input', timeout=60000)  # 60 seconds timeout\n",
+    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"]', timeout=60000)  # Wait for any filter buttons to appear\n",
     "            print(\"Dashboard loaded successfully!\")\n",
     "        except PlaywrightTimeoutError:\n",
     "            print(\"Timeout waiting for filters to load. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Locate all dropdown filters (select elements) and input filters\n",
-    "        filters = await page.query_selector_all('select, input')\n",
+    "        # Locate the filter button with aria-label (you can adjust the filter name here)\n",
+    "        filter_button = await page.query_selector('button[aria-label=\"BF Level 2 Name filter All\"]')\n",
+    "        if filter_button:\n",
+    "            await filter_button.click()  # Click to open the filter menu\n",
+    "            print(\"Filter button clicked successfully!\")\n",
+    "        else:\n",
+    "            print(\"Filter button not found.\")\n",
+    "            return\n",
     "\n",
-    "        # Print details for all filters\n",
-    "        print(\"\\nFilters Found:\")\n",
-    "        for filter_el in filters:\n",
-    "            filter_name = await filter_el.get_attribute('name') or await filter_el.get_attribute('id') or \"Unnamed Filter\"\n",
-    "            filter_type = await filter_el.get_attribute('type') if await filter_el.get_attribute('type') else 'select'\n",
-    "\n",
-    "            print(f\"Filter Name: {filter_name}, Filter Type: {filter_type}\")\n",
+    "        # Wait for the dropdown options to load and select the desired option (example: 'Finance')\n",
+    "        try:\n",
+    "            await page.wait_for_selector('text=\"Finance\"', timeout=10000)  # Adjust the timeout and option text\n",
+    "            await page.click('text=\"Finance\"')  # Select the option 'Finance'\n",
+    "            print(\"Filter option 'Finance' selected.\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Could not find the option 'Finance'.\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
     "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
@@ -64,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d844f6",
+   "id": "e2dc10ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeaf4e9e",
+   "id": "2782e70e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c7bea8",
+   "id": "417bc1c1",
    "metadata": {},
    "outputs": [],
    "source": [
