--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d7f4845",
+   "id": "ad4d45fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "        context = await browser.new_context()\n",
     "        page = await context.new_page()\n",
     "\n",
-    "        # Navigate to the initial website\n",
+    "        # Navigate to the website\n",
     "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
     "        await page.wait_for_load_state('networkidle')\n",
     "\n",
@@ -37,28 +37,35 @@
     "\n",
     "        # Wait for the dashboard to load\n",
     "        try:\n",
-    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"]', timeout=60000)  # Wait for any filter buttons to appear\n",
+    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=60000)  # Broader wait for buttons\n",
     "            print(\"Dashboard loaded successfully!\")\n",
     "        except PlaywrightTimeoutError:\n",
     "            print(\"Timeout waiting for filters to load. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Locate the filter button with aria-label (you can adjust the filter name here)\n",
-    "        filter_button = await page.query_selector('button[aria-label=\"BF Level 2 Name filter All\"]')\n",
-    "        if filter_button:\n",
-    "            await filter_button.click()  # Click to open the filter menu\n",
-    "            print(\"Filter button clicked successfully!\")\n",
-    "        else:\n",
-    "            print(\"Filter button not found.\")\n",
-    "            return\n",
-    "\n",
-    "        # Wait for the dropdown options to load and select the desired option (example: 'Finance')\n",
+    "        # Locate the filter button using visible text \"BF Level 2 Name: All\"\n",
     "        try:\n",
-    "            await page.wait_for_selector('text=\"Finance\"', timeout=10000)  # Adjust the timeout and option text\n",
-    "            await page.click('text=\"Finance\"')  # Select the option 'Finance'\n",
-    "            print(\"Filter option 'Finance' selected.\")\n",
+    "            filter_selector = 'text=\"BF Level 2 Name: All\"'\n",
+    "            await page.wait_for_selector(filter_selector, timeout=30000)\n",
+    "            filter_button = await page.query_selector(filter_selector)\n",
+    "            if filter_button:\n",
+    "                await filter_button.click()  # Click to open the filter menu\n",
+    "                print(\"Filter button 'BF Level 2 Name: All' clicked successfully!\")\n",
+    "            else:\n",
+    "                print(\"Filter button 'BF Level 2 Name: All' not found.\")\n",
+    "                return\n",
+    "\n",
+    "            # Wait for the dropdown options to load and select the desired option (example: 'Finance')\n",
+    "            try:\n",
+    "                await page.wait_for_selector('text=\"Finance\"', timeout=10000)  # Adjust the timeout and option text\n",
+    "                await page.click('text=\"Finance\"')  # Select the option 'Finance'\n",
+    "                print(\"Filter option 'Finance' selected.\")\n",
+    "            except PlaywrightTimeoutError:\n",
+    "                print(\"Could not find the option 'Finance'.\")\n",
+    "\n",
     "        except PlaywrightTimeoutError:\n",
-    "            print(\"Could not find the option 'Finance'.\")\n",
+    "            print(\"Timeout waiting for the filter button 'BF Level 2 Name: All'. Exiting...\")\n",
+    "            return\n",
     "\n",
     "        # Keep the browser open for inspection\n",
     "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
@@ -70,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2dc10ab",
+   "id": "5f2a4df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2782e70e",
+   "id": "b8ec06fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417bc1c1",
+   "id": "ed70aa73",
    "metadata": {},
    "outputs": [],
    "source": [
