--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad4d45fd",
+   "id": "cfd648ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "    async with async_playwright() as playwright:\n",
     "        browser = await playwright.chromium.launch(\n",
     "            executable_path=chrome_path, \n",
-    "            headless=False\n",
+    "            headless=False  # Run in full browser window\n",
     "        )\n",
     "        context = await browser.new_context()\n",
     "        page = await context.new_page()\n",
@@ -35,37 +35,36 @@
     "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Wait for the dashboard to load\n",
+    "        # Wait for the dashboard or new page to load completely\n",
     "        try:\n",
-    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=60000)  # Broader wait for buttons\n",
-    "            print(\"Dashboard loaded successfully!\")\n",
+    "            await page.wait_for_load_state('networkidle', timeout=60000)  # Wait for complete loading of the page\n",
+    "            print(\"Dashboard fully loaded!\")\n",
     "        except PlaywrightTimeoutError:\n",
-    "            print(\"Timeout waiting for filters to load. Exiting...\")\n",
+    "            print(\"Timeout waiting for the page to load. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Locate the filter button using visible text \"BF Level 2 Name: All\"\n",
-    "        try:\n",
-    "            filter_selector = 'text=\"BF Level 2 Name: All\"'\n",
-    "            await page.wait_for_selector(filter_selector, timeout=30000)\n",
-    "            filter_button = await page.query_selector(filter_selector)\n",
-    "            if filter_button:\n",
-    "                await filter_button.click()  # Click to open the filter menu\n",
-    "                print(\"Filter button 'BF Level 2 Name: All' clicked successfully!\")\n",
-    "            else:\n",
-    "                print(\"Filter button 'BF Level 2 Name: All' not found.\")\n",
-    "                return\n",
+    "        # Now, list all buttons on the page\n",
+    "        buttons = await page.query_selector_all('button')\n",
+    "        print(\"\\nButtons Found:\")\n",
+    "        for button in buttons:\n",
+    "            # Get button details like id, text, aria-label, etc.\n",
+    "            button_id = await button.get_attribute('id')\n",
+    "            button_text = await button.inner_text()\n",
+    "            aria_label = await button.get_attribute('aria-label')\n",
     "\n",
-    "            # Wait for the dropdown options to load and select the desired option (example: 'Finance')\n",
-    "            try:\n",
-    "                await page.wait_for_selector('text=\"Finance\"', timeout=10000)  # Adjust the timeout and option text\n",
-    "                await page.click('text=\"Finance\"')  # Select the option 'Finance'\n",
-    "                print(\"Filter option 'Finance' selected.\")\n",
-    "            except PlaywrightTimeoutError:\n",
-    "                print(\"Could not find the option 'Finance'.\")\n",
+    "            print(f\"ID: {button_id}, Text: {button_text}, Aria-label: {aria_label}\")\n",
     "\n",
-    "        except PlaywrightTimeoutError:\n",
-    "            print(\"Timeout waiting for the filter button 'BF Level 2 Name: All'. Exiting...\")\n",
-    "            return\n",
+    "        # Now, list all filter elements (inputs, selects, dropdowns)\n",
+    "        filters = await page.query_selector_all('input, select, button[aria-haspopup=\"menu\"], [role=\"combobox\"]')\n",
+    "        print(\"\\nFilters Found:\")\n",
+    "        for filter_el in filters:\n",
+    "            # Get filter details like id, name, type, aria-label, etc.\n",
+    "            filter_id = await filter_el.get_attribute('id')\n",
+    "            filter_name = await filter_el.get_attribute('name')\n",
+    "            filter_type = await filter_el.get_attribute('type')\n",
+    "            aria_label = await filter_el.get_attribute('aria-label')\n",
+    "\n",
+    "            print(f\"ID: {filter_id}, Name: {filter_name}, Type: {filter_type}, Aria-label: {aria_label}\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
     "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
@@ -77,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f2a4df6",
+   "id": "176b9a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ec06fa",
+   "id": "0e2fdef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed70aa73",
+   "id": "6a62fad0",
    "metadata": {},
    "outputs": [],
    "source": [
