--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfd648ab",
+   "id": "a768b528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "    async with async_playwright() as playwright:\n",
     "        browser = await playwright.chromium.launch(\n",
     "            executable_path=chrome_path, \n",
-    "            headless=False  # Run in full browser window\n",
+    "            headless=False  # Run in a full browser window\n",
     "        )\n",
     "        context = await browser.new_context()\n",
     "        page = await context.new_page()\n",
@@ -35,35 +35,32 @@
     "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Wait for the dashboard or new page to load completely\n",
+    "        # Wait for the dashboard to load by waiting for specific filters or buttons\n",
     "        try:\n",
-    "            await page.wait_for_load_state('networkidle', timeout=60000)  # Wait for complete loading of the page\n",
-    "            print(\"Dashboard fully loaded!\")\n",
+    "            print(\"Waiting for dashboard elements to load...\")\n",
+    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"]', timeout=60000)  # Wait for a filter or button to appear\n",
+    "            print(\"Dashboard loaded successfully!\")\n",
     "        except PlaywrightTimeoutError:\n",
-    "            print(\"Timeout waiting for the page to load. Exiting...\")\n",
+    "            print(\"Timeout waiting for filters to load. Exiting...\")\n",
     "            return\n",
     "\n",
-    "        # Now, list all buttons on the page\n",
+    "        # List all buttons on the page\n",
     "        buttons = await page.query_selector_all('button')\n",
     "        print(\"\\nButtons Found:\")\n",
     "        for button in buttons:\n",
-    "            # Get button details like id, text, aria-label, etc.\n",
     "            button_id = await button.get_attribute('id')\n",
     "            button_text = await button.inner_text()\n",
     "            aria_label = await button.get_attribute('aria-label')\n",
-    "\n",
     "            print(f\"ID: {button_id}, Text: {button_text}, Aria-label: {aria_label}\")\n",
     "\n",
-    "        # Now, list all filter elements (inputs, selects, dropdowns)\n",
+    "        # List all filter elements (inputs, selects, buttons, etc.)\n",
     "        filters = await page.query_selector_all('input, select, button[aria-haspopup=\"menu\"], [role=\"combobox\"]')\n",
     "        print(\"\\nFilters Found:\")\n",
     "        for filter_el in filters:\n",
-    "            # Get filter details like id, name, type, aria-label, etc.\n",
     "            filter_id = await filter_el.get_attribute('id')\n",
     "            filter_name = await filter_el.get_attribute('name')\n",
     "            filter_type = await filter_el.get_attribute('type')\n",
     "            aria_label = await filter_el.get_attribute('aria-label')\n",
-    "\n",
     "            print(f\"ID: {filter_id}, Name: {filter_name}, Type: {filter_type}, Aria-label: {aria_label}\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
@@ -76,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176b9a4a",
+   "id": "b6b4348d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2fdef9",
+   "id": "86da5886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a62fad0",
+   "id": "add69029",
    "metadata": {},
    "outputs": [],
    "source": [
