--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a768b528",
+   "id": "451f812e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "from playwright.async_api import async_playwright, TimeoutError as PlaywrightTimeoutError\n",
+    "\n",
+    "async def run():\n",
+    "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
+    "\n",
+    "    async with async_playwright() as playwright:\n",
+    "        browser = await playwright.chromium.launch(\n",
+    "            executable_path=chrome_path, \n",
+    "            headless=False  # Run in full browser window\n",
+    "        )\n",
+    "        context = await browser.new_context()\n",
+    "        page = await context.new_page()\n",
+    "\n",
+    "        # Navigate to the website\n",
+    "        await page.goto(\"https://www.example.com\")  # Replace with actual URL\n",
+    "        await page.wait_for_load_state('networkidle')\n",
+    "\n",
+    "        # Click the SSO button\n",
+    "        button_text_selector = \"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\"\n",
+    "        try:\n",
+    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=60000)  # 60 seconds timeout\n",
+    "            await page.click(f'xpath={button_text_selector}')\n",
+    "            print(\"SSO button clicked successfully!\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
+    "            return\n",
+    "\n",
+    "        # Increase timeout and use a more Angular-friendly method to detect page load\n",
+    "        try:\n",
+    "            # Wait for an element that indicates the page has loaded completely (replace this with any known element in the dashboard)\n",
+    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=120000)  # Wait for 2 minutes\n",
+    "            print(\"Dashboard loaded successfully!\")\n",
+    "        except PlaywrightTimeoutError:\n",
+    "            print(\"Timeout waiting for the dashboard to load. Exiting...\")\n",
+    "            return\n",
+    "\n",
+    "        # Now, list all buttons on the page\n",
+    "        buttons = await page.query_selector_all('button')\n",
+    "        print(\"\\nButtons Found:\")\n",
+    "        for button in buttons:\n",
+    "            # Get button details like id, text, aria-label, etc.\n",
+    "            button_id = await button.get_attribute('id')\n",
+    "            button_text = await button.inner_text()\n",
+    "            aria_label = await button.get_attribute('aria-label')\n",
+    "\n",
+    "            print(f\"ID: {button_id}, Text: {button_text}, Aria-label: {aria_label}\")\n",
+    "\n",
+    "        # Now, list all filter elements (inputs, selects, dropdowns)\n",
+    "        filters = await page.query_selector_all('input, select, button[aria-haspopup=\"menu\"], [role=\"combobox\"]')\n",
+    "        print(\"\\nFilters Found:\")\n",
+    "        for filter_el in filters:\n",
+    "            # Get filter details like id, name, type, aria-label, etc.\n",
+    "            filter_id = await filter_el.get_attribute('id')\n",
+    "            filter_name = await filter_el.get_attribute('name')\n",
+    "            filter_type = await filter_el.get_attribute('type')\n",
+    "            aria_label = await filter_el.get_attribute('aria-label')\n",
+    "\n",
+    "            print(f\"ID: {filter_id}, Name: {filter_name}, Type: {filter_type}, Aria-label: {aria_label}\")\n",
+    "\n",
+    "        # Keep the browser open for inspection\n",
+    "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    asyncio.run(run())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54da575e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b4348d",
+   "id": "cd68e83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86da5886",
+   "id": "4b9bc250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add69029",
+   "id": "ef3a7bcd",
    "metadata": {},
    "outputs": [],
    "source": [
