--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,20 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451f812e",
+   "id": "4bf714af",
    "metadata": {},
    "outputs": [],
    "source": [
     "import asyncio\n",
-    "from playwright.async_api import async_playwright, TimeoutError as PlaywrightTimeoutError\n",
+    "from playwright.async_api import async_playwright\n",
     "\n",
     "async def run():\n",
     "    chrome_path = \"C:/Program Files/Google/Chrome/Application/chrome.exe\"  # Adjust if necessary\n",
     "\n",
     "    async with async_playwright() as playwright:\n",
     "        browser = await playwright.chromium.launch(\n",
-    "            executable_path=chrome_path, \n",
-    "            headless=False  # Run in full browser window\n",
+    "            executable_path=chrome_path,\n",
+    "            headless=False  # Run in a full browser window\n",
     "        )\n",
     "        context = await browser.new_context()\n",
     "        page = await context.new_page()\n",
@@ -26,46 +26,22 @@
     "        await page.wait_for_load_state('networkidle')\n",
     "\n",
     "        # Click the SSO button\n",
-    "        button_text_selector = \"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\"\n",
+    "        await page.click(\"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\")\n",
+    "\n",
+    "        # Wait for the dashboard to load by looking for a specific element (adjust this as necessary)\n",
+    "        await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=60000)\n",
+    "\n",
+    "        # Now interact with the filter button\n",
     "        try:\n",
-    "            await page.wait_for_selector(f'xpath={button_text_selector}', timeout=60000)  # 60 seconds timeout\n",
-    "            await page.click(f'xpath={button_text_selector}')\n",
-    "            print(\"SSO button clicked successfully!\")\n",
-    "        except PlaywrightTimeoutError:\n",
-    "            print(\"Could not find the SSO button on the page. Exiting...\")\n",
-    "            return\n",
+    "            # Click the filter button using aria-label\n",
+    "            await page.click('button[aria-label=\"BF Level Name filterAll\"]')\n",
+    "            print(\"Clicked on BF Level Name filter button.\")\n",
     "\n",
-    "        # Increase timeout and use a more Angular-friendly method to detect page load\n",
-    "        try:\n",
-    "            # Wait for an element that indicates the page has loaded completely (replace this with any known element in the dashboard)\n",
-    "            await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=120000)  # Wait for 2 minutes\n",
-    "            print(\"Dashboard loaded successfully!\")\n",
-    "        except PlaywrightTimeoutError:\n",
-    "            print(\"Timeout waiting for the dashboard to load. Exiting...\")\n",
-    "            return\n",
+    "            # Alternatively, you can also use the button's ID\n",
+    "            # await page.click('#select')  # Uncomment this if preferred\n",
     "\n",
-    "        # Now, list all buttons on the page\n",
-    "        buttons = await page.query_selector_all('button')\n",
-    "        print(\"\\nButtons Found:\")\n",
-    "        for button in buttons:\n",
-    "            # Get button details like id, text, aria-label, etc.\n",
-    "            button_id = await button.get_attribute('id')\n",
-    "            button_text = await button.inner_text()\n",
-    "            aria_label = await button.get_attribute('aria-label')\n",
-    "\n",
-    "            print(f\"ID: {button_id}, Text: {button_text}, Aria-label: {aria_label}\")\n",
-    "\n",
-    "        # Now, list all filter elements (inputs, selects, dropdowns)\n",
-    "        filters = await page.query_selector_all('input, select, button[aria-haspopup=\"menu\"], [role=\"combobox\"]')\n",
-    "        print(\"\\nFilters Found:\")\n",
-    "        for filter_el in filters:\n",
-    "            # Get filter details like id, name, type, aria-label, etc.\n",
-    "            filter_id = await filter_el.get_attribute('id')\n",
-    "            filter_name = await filter_el.get_attribute('name')\n",
-    "            filter_type = await filter_el.get_attribute('type')\n",
-    "            aria_label = await filter_el.get_attribute('aria-label')\n",
-    "\n",
-    "            print(f\"ID: {filter_id}, Name: {filter_name}, Type: {filter_type}, Aria-label: {aria_label}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error clicking the button: {e}\")\n",
     "\n",
     "        # Keep the browser open for inspection\n",
     "        await asyncio.sleep(300)  # Keep the browser open for 5 minutes\n",
@@ -77,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54da575e",
+   "id": "f5b2d59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd68e83b",
+   "id": "6854e764",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9bc250",
+   "id": "d5256ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3a7bcd",
+   "id": "adc63914",
    "metadata": {},
    "outputs": [],
    "source": [
