--- a/playwright_script.ipynb
+++ b/playwright_script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf714af",
+   "id": "d34ad99e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,17 +28,24 @@
     "        # Click the SSO button\n",
     "        await page.click(\"//button[text()=\\\"My organization's single sign-on (SSO)\\\"]\")\n",
     "\n",
-    "        # Wait for the dashboard to load by looking for a specific element (adjust this as necessary)\n",
-    "        await page.wait_for_selector('button[aria-haspopup=\"menu\"], button[aria-label]', timeout=60000)\n",
+    "        # Wait for the dashboard to load\n",
+    "        print(\"Waiting for the main menu button...\")\n",
+    "        await page.wait_for_selector('button[aria-haspopup=\"menu\"]', timeout=60000)\n",
     "\n",
-    "        # Now interact with the filter button\n",
+    "        # Now use XPath to find the button where aria-label contains \"BF Level 2 Name\"\n",
     "        try:\n",
-    "            # Click the filter button using aria-label\n",
-    "            await page.click('button[aria-label=\"BF Level Name filterAll\"]')\n",
-    "            print(\"Clicked on BF Level Name filter button.\")\n",
-    "\n",
-    "            # Alternatively, you can also use the button's ID\n",
-    "            # await page.click('#select')  # Uncomment this if preferred\n",
+    "            print(\"Searching for the filter button...\")\n",
+    "            filter_button = await page.query_selector('//button[contains(@aria-label, \"BF Level 2 Name\")]')\n",
+    "            if filter_button:\n",
+    "                print(\"Filter button found. Attempting to click...\")\n",
+    "                # Ensure the button is visible\n",
+    "                if await filter_button.is_visible():\n",
+    "                    await filter_button.click()\n",
+    "                    print(\"Clicked on the filter button with aria-label containing 'BF Level 2 Name'.\")\n",
+    "                else:\n",
+    "                    print(\"Filter button is not visible.\")\n",
+    "            else:\n",
+    "                print(\"Filter button not found.\")\n",
     "\n",
     "        except Exception as e:\n",
     "            print(f\"Error clicking the button: {e}\")\n",
@@ -53,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b2d59d",
+   "id": "9c190c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6854e764",
+   "id": "3bf96f71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5256ffb",
+   "id": "53f9b2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc63914",
+   "id": "73250555",
    "metadata": {},
    "outputs": [],
    "source": [
