--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d572de",
+   "id": "9e03dcc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "    # Find the header row\n",
     "    header_row = None\n",
     "    for index, row in sheet.iterrows():\n",
-    "        if all(col in row.values for col in ['Entity', 'RTN Level 4', 'Account']):\n",
+    "        if ('Entity' in row.values) and ('RTN Level 4' in row.values) and ('Account' in row.values):\n",
     "            header_row = index\n",
     "            break\n",
     "    \n",
@@ -26,11 +26,15 @@
     "    # Row above header\n",
     "    year_row = header_row - 1\n",
     "\n",
-    "    # Iterate over the columns\n",
+    "    # Identify the Mxx, FY, and YTDxx columns and concatenate them with the row above\n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col) or col.startswith('FY') or re.match(r'YTD\\d{2}', col):\n",
     "            # Concatenate current cell with the one above\n",
-    "            sheet.at[year_row, col] = f\"{sheet.at[header_row, col]} {sheet.at[year_row, col]}\"\n",
+    "            for idx in range(header_row + 1, len(sheet)):\n",
+    "                sheet.at[idx, col] = f\"{sheet.at[year_row, col]} {sheet.at[idx, col]}\"\n",
+    "\n",
+    "    # Display for testing\n",
+    "    print(f\"Processed sheet from header row {header_row}.\")\n",
     "\n",
     "# Main processing function\n",
     "def main():\n",
