--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re\n",
+    "import os\n",
     "\n",
     "# Function to process each sheet\n",
     "def process_sheet(sheet):\n",
@@ -36,14 +36,34 @@
     "    # Display for testing\n",
     "    print(f\"Processed sheet from header row {header_row}.\")\n",
     "\n",
+    "# Function to create or overwrite the workbook\n",
+    "def create_or_overwrite_workbook(file_path):\n",
+    "    # Check if the file exists\n",
+    "    if os.path.exists(file_path):\n",
+    "        os.remove(file_path)\n",
+    "        print(f\"File '{file_path}' already exists. It has been deleted and will be recreated.\")\n",
+    "    else:\n",
+    "        print(f\"File '{file_path}' does not exist. It will be created.\")\n",
+    "\n",
+    "    # Create an empty workbook to write processed sheets to\n",
+    "    with pd.ExcelWriter(file_path, engine='openpyxl') as writer:\n",
+    "        # An empty workbook is created at this point\n",
+    "        pass\n",
+    "\n",
     "# Main processing function\n",
     "def main():\n",
     "    # Get current year and month from user\n",
     "    current_year = input(\"Enter current year (e.g., 2024): \")\n",
     "    current_month = input(\"Enter current month (1-12): \")\n",
     "\n",
+    "    # Specify the file path where the processed file will be saved\n",
+    "    processed_file = 'processed_file.xlsx'\n",
+    "\n",
+    "    # Create or overwrite the workbook\n",
+    "    create_or_overwrite_workbook(processed_file)\n",
+    "\n",
     "    # Load the workbook\n",
-    "    excel_file = 'your_file.xlsx'  # Replace with your file path\n",
+    "    excel_file = 'your_file.xlsx'  # Replace with your input file path\n",
     "    xls = pd.ExcelFile(excel_file)\n",
     "    \n",
     "    # Process each sheet\n",
@@ -52,9 +72,11 @@
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "            process_sheet(sheet)\n",
     "\n",
-    "            # Save back to the same or a new file\n",
-    "            with pd.ExcelWriter('processed_file.xlsx', engine='openpyxl', mode='a') as writer:\n",
+    "            # Save the processed sheet to the new workbook\n",
+    "            with pd.ExcelWriter(processed_file, engine='openpyxl', mode='a') as writer:\n",
     "                sheet.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n",
+    "    print(f\"Processing complete. Data saved to '{processed_file}'.\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
